--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,8 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs-pro": "^3.11.9",
+    "@fingerprintjs/fingerprintjs-pro-react": "^2.6.3",
     "@hookform/resolvers": "^5.0.1",
     "@iconify/react": "^6.0.0",
     "@radix-ui/react-icons": "^1.3.2",
@@ -23,6 +25,7 @@
     "@tazeai/i18n": "workspace:*",
     "@tazeai/shared": "workspace:*",
     "@tazeai/ui": "workspace:*",
+    "@vercel/analytics": "^1.5.0",
     "hono": "^4.7.10",
     "i18next": "^25.2.0",
     "lucide-react": "catalog:",
