--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,10 @@
     "clean": "rimraf dist .turbo"
   },
   "dependencies": {
+    "@headless-tree/core": "^1.0.1",
     "@hookform/resolvers": "^5.0.1",
+    "@internationalized/date": "^3.8.1",
+    "@origin-space/image-cropper": "^0.1.9",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -54,7 +57,8 @@
     "lucide-react": "catalog:",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
-    "react-day-picker": "8.10.1",
+    "react-aria-components": "^1.9.0",
+    "react-day-picker": "^9.6.4",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
