--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,6 @@
 registry=https://registry.npmjs.org/
+dedupe-peer-dependents=true
+use-lockfile-v6=true
+resolution-mode=highest
 package-manager-strict=false
+# public-hoist-pattern[]=*prettier*
