--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.41",
+    "@react-email/render": "^1.1.2",
     "@tazeai/env": "workspace:*",
     "react": "catalog:",
     "react-dom": "catalog:",
