chore: update package dependencies and configurations, including @types/react to version 19.1.6 and @next/bundle-analyzer to 15.3.2; refactor next.config.ts for bundle analysis

--- a/.npmrc
+++ b/.npmrc
@@ -3,4 +3,4 @@ dedupe-peer-dependents=true
 use-lockfile-v6=true
 resolution-mode=highest
 package-manager-strict=false
-# public-hoist-pattern[]=*prettier*
+public-hoist-pattern[]=*prettier*
