--- a/.npmrc
+++ b/.npmrc
@@ -4,3 +4,4 @@ use-lockfile-v6=true
 resolution-mode=highest
 package-manager-strict=false
 public-hoist-pattern[]=*prettier*
+public-hoist-pattern[]=*require-in-the-middle*
