--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@iconify/react": "^6.0.0",
     "@radix-ui/react-icons": "^1.3.2",
+    "@tazeai/analytics": "workspace:*",
     "@tazeai/auth": "workspace:*",
     "@tazeai/cache": "workspace:*",
     "@tazeai/core": "workspace:*",
