--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,11 +12,10 @@
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
-    "@fingerprintjs/fingerprintjs-pro": "^3.11.10",
-    "@fingerprintjs/fingerprintjs-pro-react": "^2.6.3",
     "@hookform/resolvers": "^5.0.1",
     "@iconify/react": "^6.0.0",
     "@radix-ui/react-icons": "^1.3.2",
+    "@tazeai/analytics": "workspace:*",
     "@tazeai/auth": "workspace:*",
     "@tazeai/cache": "workspace:*",
     "@tazeai/core": "workspace:*",
@@ -25,7 +24,6 @@
     "@tazeai/i18n": "workspace:*",
     "@tazeai/shared": "workspace:*",
     "@tazeai/ui": "workspace:*",
-    "@vercel/analytics": "^1.5.0",
     "hono": "^4.7.10",
     "i18next": "^25.2.1",
     "lucide-react": "catalog:",
