--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -4,19 +4,25 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts",
-    "./envs": "./src/envs.ts"
+    ".": "./src/index.tsx",
+    "./envs": "./src/envs.ts",
+    "./posthog/server": "./src/posthog/server.ts"
   },
   "scripts": {
-    "clean": "rimraf dist .turbo"
+    "clean": "rimraf dist .turbo",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
+    "@next/third-parties": "^15.3.2",
     "@tazeai/env": "workspace:*",
+    "@vercel/analytics": "^1.5.0",
+    "posthog-js": "^1.248.0",
+    "posthog-node": "^4.18.0",
     "zod": "catalog:"
   },
   "devDependencies": {
     "@tazeai/typescript-config": "workspace:*",
-    "@types/lodash-es": "^4.17.12",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
