chore: update package dependencies and configurations

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,10 +26,10 @@
     "@tazeai/ui": "workspace:*",
     "hono": "^4.7.11",
     "i18next": "^25.2.1",
-    "lucide-react": "catalog:",
+    "lucide-react": "^0.513.0",
     "next": "^15.3.3",
-    "react": "catalog:",
-    "react-dom": "catalog:",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
     "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
@@ -41,9 +41,9 @@
     "@next/bundle-analyzer": "^15.3.3",
     "@tailwindcss/postcss": "^4.1.8",
     "@tazeai/typescript-config": "workspace:*",
-    "@types/node": "catalog:",
-    "@types/react": "catalog:",
-    "@types/react-dom": "catalog:",
+    "@types/node": "^22.15.29",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "dotenv-cli": "^8.0.0",
     "tailwindcss": "^4.1.8",
     "typescript": "catalog:"
