--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/node": "catalog:",
+    "@types/node": "^22.15.29",
     "dotenv-cli": "^8.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
@@ -35,7 +35,7 @@
     "turbo": "^2.5.4",
     "type-fest": "^4.41.0",
     "typescript": "catalog:",
-    "vitest": "^3.2.0"
+    "vitest": "^3.2.1"
   },
   "packageManager": "pnpm@10.11.1",
   "engines": {
