--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -17,15 +17,15 @@
     "@next/third-parties": "^15.3.3",
     "@tazeai/env": "workspace:*",
     "@vercel/analytics": "^1.5.0",
-    "posthog-js": "^1.249.0",
+    "posthog-js": "^1.249.2",
     "posthog-node": "^4.18.0",
     "zod": "catalog:"
   },
   "devDependencies": {
     "@tazeai/typescript-config": "workspace:*",
-    "@types/node": "catalog:",
-    "@types/react": "catalog:",
-    "@types/react-dom": "catalog:",
+    "@types/node": "^22.15.29",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "typescript": "catalog:"
   }
 }
