--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -27,7 +27,7 @@
     "bcrypt-ts": "^7.0.0",
     "better-auth": "^1.2.8",
     "lodash-es": "^4.17.21",
-    "lucide-react": "catalog:",
+    "lucide-react": "^0.513.0",
     "nanoid": "^5.1.5",
     "react-hook-form": "^7.57.0",
     "react-i18next": "^15.5.2",
@@ -39,10 +39,10 @@
   "devDependencies": {
     "@tazeai/typescript-config": "workspace:*",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "catalog:",
-    "@types/react": "catalog:",
-    "@types/react-dom": "catalog:",
+    "@types/node": "^22.15.29",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "typescript": "catalog:",
-    "vitest": "^3.2.0"
+    "vitest": "^3.2.1"
   }
 }
