--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -14,16 +14,16 @@
     "@react-email/components": "^0.0.41",
     "@react-email/render": "^1.1.2",
     "@tazeai/env": "workspace:*",
-    "react": "catalog:",
-    "react-dom": "catalog:",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "resend": "^4.5.1",
     "zod": "catalog:"
   },
   "devDependencies": {
     "@tazeai/typescript-config": "workspace:*",
-    "@types/node": "catalog:",
-    "@types/react": "catalog:",
-    "@types/react-dom": "catalog:",
+    "@types/node": "^22.15.29",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "typescript": "catalog:"
   }
 }
