--- a/packages/tooling/scripts/package.json
+++ b/packages/tooling/scripts/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@tazeai/typescript-config": "workspace:*",
-    "@types/node": "catalog:",
+    "@types/node": "^22.15.29",
     "typescript": "catalog:"
   }
 }
