--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -54,7 +54,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
-    "lucide-react": "catalog:",
+    "lucide-react": "^0.513.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-aria-components": "^1.9.0",
@@ -66,7 +66,7 @@
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
-    "tw-animate-css": "^1.3.3",
+    "tw-animate-css": "^1.3.4",
     "vaul": "^1.1.2",
     "zod": "catalog:"
   },
@@ -75,9 +75,9 @@
     "@tazeai/typescript-config": "workspace:*",
     "@turbo/gen": "^2.5.4",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "catalog:",
-    "@types/react": "catalog:",
-    "@types/react-dom": "catalog:",
+    "@types/node": "^22.15.29",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "tailwindcss": "^4.1.8",
     "typescript": "catalog:"
   }
