chore: update package manager to pnpm@10.12.1, add query export to db package, and implement getUser function in new query module

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,7 +5,8 @@
   "exports": {
     ".": "./src/index.ts",
     "./envs": "./src/envs.ts",
-    "./schemas": "./src/schemas.ts"
+    "./schemas": "./src/schemas.ts",
+    "./query": "./src/query/index.ts"
   },
   "scripts": {
     "clean": "rimraf dist .turbo",
