--- a/docs/package.json
+++ b/docs/package.json
@@ -22,8 +22,8 @@
     "devDependencies": {
         "@tailwindcss/postcss": "^4.1.8",
         "@types/mdx": "^2.0.13",
-        "@types/node": "22.15.30",
-        "@types/react": "^19.1.6",
+        "@types/node": "^22.15.31",
+        "@types/react": "^19.1.7",
         "@types/react-dom": "^19.1.6",
         "postcss": "^8.5.4",
         "tailwindcss": "^4.1.8",
