--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -26,15 +26,14 @@
     "lodash-es": "^4.17.21",
     "nanoid": "^5.1.5",
     "postgres": "^3.4.7",
-    "uuid": "^11.1.0",
-    "zod": "^3.25.61"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tazeai/typescript": "workspace:*",
     "@types/lodash-es": "^4.17.12",
     "dotenv-cli": "^8.0.0",
     "drizzle-kit": "^0.31.1",
-    "tsx": "^4.20.1",
+    "tsx": "^4.20.2",
     "typescript": "^5.8.3"
   }
 }
