--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -16,13 +16,12 @@
     "@tazeai/env": "workspace:*",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "resend": "^4.5.2",
-    "zod": "^3.25.61"
+    "resend": "^4.5.2"
   },
   "devDependencies": {
     "@tazeai/typescript": "workspace:*",
     "@types/node": "^22.15.31",
-    "@types/react": "^19.1.7",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "typescript": "^5.8.3"
   }
